- Fix compile in remaining projects